[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/normal_ui_set free/UI board Small  stone.png" type="Texture" id=1]
[ext_resource path="res://interface/theme/default.theme" type="Theme" id=2]
[ext_resource path="res://assets/normal_ui_set free/IRONY TITLE  empty.png" type="Texture" id=3]
[ext_resource path="res://interface/GUI/GUI.gd" type="Script" id=4]
[ext_resource path="res://interface/UI/DiceRollPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/UI/MoveConfirmPopup.tscn" type="PackedScene" id=6]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionMenu" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -150.0
margin_right = 292.0
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ActionMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.384314, 0.588235, 0.192157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ActionMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ActionMenu/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 276.0
margin_bottom = 285.0
custom_constants/separation = 16
alignment = 1

[node name="RollButton" type="Button" parent="ActionMenu/MarginContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="ActionMenu/MarginContainer/VBoxContainer/RollButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Roll"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="Button" parent="ActionMenu/MarginContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 76.0
margin_right = 180.0
margin_bottom = 126.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ActionMenu/MarginContainer/VBoxContainer/InventoryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewBoardButton" type="Button" parent="ActionMenu/MarginContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 142.0
margin_right = 180.0
margin_bottom = 192.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ActionMenu/MarginContainer/VBoxContainer/ViewBoardButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "View Board"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfoButton" type="Button" parent="ActionMenu/MarginContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 208.0
margin_right = 180.0
margin_bottom = 258.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ActionMenu/MarginContainer/VBoxContainer/PlayerInfoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Player Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="NinePatchRect" parent="."]
margin_top = 454.0
margin_right = 301.0
margin_bottom = 595.0
texture = ExtResource( 1 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Counter"]
margin_right = 301.0
margin_bottom = 141.0
custom_constants/margin_right = 70
custom_constants/margin_top = 30
custom_constants/margin_left = 70
custom_constants/margin_bottom = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Counter/MarginContainer"]
margin_left = 70.0
margin_top = 30.0
margin_right = 231.0
margin_bottom = 87.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="Counter/MarginContainer/VBoxContainer"]
margin_right = 161.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Moves Left"
align = 1
valign = 1

[node name="MovesLeft" type="Label" parent="Counter/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 161.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 293.0
margin_bottom = 76.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerName" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Player Default"
align = 1
valign = 1

[node name="DiceRollPopup" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -73.5
margin_right = 125.0
margin_bottom = 73.5

[node name="MoveConfirmPopup" parent="." instance=ExtResource( 6 )]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -32.0
margin_right = 88.0
margin_bottom = 32.0

[node name="Container" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -458.5
margin_top = -246.0
margin_right = 458.5
margin_bottom = 246.0
[connection signal="pressed" from="ActionMenu/MarginContainer/VBoxContainer/RollButton" to="." method="_on_RollButton_pressed"]
[connection signal="pressed" from="ActionMenu/MarginContainer/VBoxContainer/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="ActionMenu/MarginContainer/VBoxContainer/ViewBoardButton" to="." method="_on_ViewBoardButton_pressed"]
[connection signal="pressed" from="ActionMenu/MarginContainer/VBoxContainer/PlayerInfoButton" to="." method="_on_PlayerInfoButton_pressed"]
